[project]
name = "lbh-compliance"
version = "0.1.0"
description = "Transaction monitoring/screening at the LBH Group."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "pip>=26.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "streamlit>=1.57.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
